--- a/assets/scss/components/header/_header.scss
+++ b/assets/scss/components/header/_header.scss
@@ -4,7 +4,7 @@
 .header {
   position: relative;
   display: grid;
-  align-items: center;
+  align-content: center;
   min-height: 100vh;
   padding: 150px 0;
   color: $color-light;
@@ -23,14 +23,30 @@
   }
 
   &__title {
-    margin: 0 0 69px;
     text-align: center;
+
+    @include lg-min {
+      margin: 0 0 53px;
+    }
+
+    @include lg-md {
+      margin: 0 0 43px;
+    }
+
+    @include md {
+      margin: 0 0 33px;
+    }
   }
 
   &__button {
     display: flex;
     justify-content: center;
     gap: $gap;
+
+    @include sm {
+      align-items: center;
+      flex-direction: column;
+    }
   }
 }
 
@@ -40,6 +56,11 @@
   top: 0;
   right: 0;
   left: 0;
+
+  @include md {
+    background-color: rgba($color-gray-dark, $alpha: 0.3);
+    @include box-shadow;
+  }
 
   &__container {
     display: grid;
@@ -51,7 +72,7 @@
 }
 
 .header-logo {
-  letter-spacing: 6px;
+  letter-spacing: 5.3px;
   font-size: 24px;
 
   &__link {
@@ -62,7 +83,7 @@
   &__accent {
     display: inline-block;
     margin-right: 4px;
-    padding: 5px;
+    padding: 14px 1px 13px 5px;
     border: 3px solid #d53d27;
   }
 }
@@ -72,28 +93,107 @@
   justify-items: end;
 
   &__button {
-    display: none;
-  }
+    width: 30px;
+    height: 22.5px;
+    position: relative;
+    margin: 25px 0;
+    transform: rotate(0deg);
+    transition: .5s ease-in-out;
+    cursor: pointer;
 
-  &__button-row {}
+    @include md-min {
+      display: none;
+    }
+
+    &-row {
+      display: block;
+      position: absolute;
+      height: 3px;
+      width: 100%;
+      background: $color-light;
+      border-radius: 3px;
+      opacity: 1;
+      left: 0;
+      transform: rotate(0deg);
+      transition: .25s ease-in-out;
+
+      &:nth-child(1) {
+        top: 0px;
+        transform-origin: left center;
+      }
+
+      &:nth-child(2) {
+        top: 9px;
+        transform-origin: left center;
+      }
+
+      &:nth-child(3) {
+        top: 18px;
+        transform-origin: left center;
+      }
+    }
+
+    &.open span {
+      &:nth-child(1) {
+        transform: rotate(45deg);
+        top: -1.5px;
+        left: 4px;
+      }
+
+      &:nth-child(2) {
+        width: 0%;
+        opacity: 0;
+      }
+
+      &:nth-child(3) {
+        transform: rotate(-45deg);
+        top: 19.5px;
+        left: 4px;
+      }
+    }
+  }
 
   &__list {
-    display: grid;
-    justify-content: end;
-    width: 100%;
-    gap: $gap;
-    grid-template-columns: repeat(auto-fit, minmax(30px, max-content));
-    @include unlist(0 (-$gap-sm) 0 0);
+    @include md-min {
+      display: grid;
+      justify-content: end;
+      width: 100%;
+      gap: $gap;
+      grid-template-columns: repeat(auto-fit, minmax(30px, max-content));
+      @include unlist(0 (-$gap-sm) 0 0);
+    }
+
+    @include md {
+      position: absolute;
+      text-align: center;
+      height: 80vh;
+      width: 100%;
+      top: 100%;
+      right: 0;
+      display: none;
+      background-color: rgba($color-gray-dark, $alpha: 0.95);
+      @include unlist;
+      @include box-shadow;
+    }
   }
 
-  &__item {}
+  &__item {
+    margin: $gap 0;
+  }
 
   &__link {
     display: block;
-    padding: $gap $gap-sm;
     transition: color 0.25s;
-    letter-spacing: 2px;
+    letter-spacing: 1.8px;
     font-size: 18px;
+
+    @include md-min {
+      padding: $gap $gap-sm;
+    }
+
+    @include md {
+      padding: $gap-sm $gap;
+    }
 
     &:hover,
     &::after {
