--- a/assets/scss/common/_classes.scss
+++ b/assets/scss/common/_classes.scss
@@ -5,9 +5,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 8px 16px;
+  padding: 9px 18px;
   transition: background-color 0.5s;
-  letter-spacing: 2px;
+  letter-spacing: 1.8px;
   border-width: 2px;
   border-style: solid;
   font-size: 18px;
@@ -22,6 +22,27 @@
     height: 60px;
     border-color: $color-light;
     background-color: rgba($color-light, 0.1);
+
+    @include lg-min {
+      width: 250px;
+      height: 60px;
+    }
+
+    @include lg-md {
+      width: 200px;
+      height: 50px;
+      font-size: 16px;
+      padding: 8px 16px;
+      letter-spacing: 1.6px;
+    }
+
+    @include md {
+      width: 170px;
+      height: 40px;
+      font-size: 16px;
+      padding: 8px 16px;
+      letter-spacing: 1.6px;
+    }
   }
 
   &--primary {
@@ -29,6 +50,14 @@
     height: 60px;
     border-color: $color-primary;
     background-color: rgba($color-primary, 0.8);
+
+    @include sm-min {
+      width: 350px;
+    }
+
+    @include sm {
+      width: 100%;
+    }
   }
 }
 
