--- a/assets/scss/mixins/_extends.scss
+++ b/assets/scss/mixins/_extends.scss
@@ -1,7 +1,7 @@
 @use "../presets" as *;
 
 %container {
-  min-width: $ul;
+  max-width: $ul;
   margin-left: auto;
   margin-right: auto;
   padding-right: $gap;
