--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,6 +166,7 @@ template {
   display: none;
 }
 
+.form__container,
 .ready__container,
 .header-content__container,
 .header-menu__container {
@@ -619,6 +620,59 @@ img {
   -ms-flex-item-align: center;
   align-self: center;
 }
+
+.form {
+  padding: 30px 0;
+
+  background-color: #2d3651;
+}
+.form__container {
+  display: grid;
+
+  gap: 20px;
+}
+.form .form-element__input {
+  display: block;
+
+  width: 100%;
+  height: 60px;
+  padding: 1px 30px;
+
+  letter-spacing: 2.4px;
+
+  color: #ffffff;
+  border: 2px solid rgba(255, 255, 255, 0);
+  border-bottom-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(255, 255, 255, 0.1);
+
+  font-size: 18px;
+}
+.form .form-element__input:hover,
+.form .form-element__input:focus {
+  -webkit-transition: background-color 0.5s, border-color 0.5s;
+       -o-transition: background-color 0.5s, border-color 0.5s;
+          transition: background-color 0.5s, border-color 0.5s;
+
+  color: #ffffff;
+  border: 2px solid rgba(255, 255, 255, 0.2);
+  border-bottom-color: rgba(255, 255, 255, 0.7);
+  background-color: rgba(255, 255, 255, 0.2);
+}
+.form .form-element .button:hover,
+.form .form-element .button:focus {
+  border: 2px solid #ffffff;
+  background-color: #d66926;
+}
+.form .form-element .button--primary {
+  width: 100%;
+  height: 60px;
+  padding: 1px 30px;
+
+  color: #ffffff;
+  border: 2px solid rgba(255, 255, 255, 0);
+  border-bottom-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(255, 255, 255, 0.1);
+}
 @media (min-width: 576px) {
   .button--primary {
     width: 350px;
@@ -660,6 +714,9 @@ img {
   }
   .header-navbar__link {
     padding: 20px 10px;
+  }
+  .form__container {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 @media (min-width: 992px) {
@@ -843,6 +900,12 @@ img {
     grid-template-areas: "a1 a2" "a3 a2" "a4 a4" "a5 a6" "a5 a7" "a8 a9";
     grid-template-columns: repeat(2, 1fr);
   }
+  .form__container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .form .form-element:nth-of-type(1) {
+    grid-column: 1/span 2;
+  }
 }
 @media (max-height: 690.98px) {
   .skills__container {
@@ -897,5 +960,8 @@ img {
     margin-top: -16px;
     padding-top: 20px;
     padding-left: 0;
+  }
+  .form__container {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
