--- a/assets/scss/common/_typography.scss
+++ b/assets/scss/common/_typography.scss
@@ -37,6 +37,34 @@ h1 {
 h2 {
   font-family: $font-header;
   color: $color-primary;
+  margin-top: 0;
+  font-weight: 700;
+
+  @include lg-min {
+    margin-bottom: 48px;
+    letter-spacing: 4px;
+    font-size: 40px;
+    line-height: 48px;
+  }
+
+  @include lg {
+    font-size: 32px;
+    letter-spacing: 3.2px;
+    line-height: 39px;
+    margin-bottom: 41px;
+  }
+
+  @include md {
+    font-size: 24px;
+    letter-spacing: 2.4px;
+    line-height: 29px;
+    margin-bottom: 36px;
+  }
+
+  @include sm {
+    text-align: center;
+    line-height: 28.5px;
+  }
 }
 
 a {
