--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -664,8 +664,6 @@ img {
 }
 .form .form-element .button--primary {
   width: 100%;
-  height: 60px;
-  padding: 1px 30px;
 
   color: #ffffff;
   border: 2px solid rgba(255, 255, 255, 0);
@@ -716,6 +714,8 @@ img {
   overflow: hidden;
 
   height: 100%;
+
+  grid-template-rows: 300px 1fr;
 }
 .posts-item__image {
   display: -webkit-box;
@@ -746,7 +746,6 @@ img {
   -ms-flex-line-pack: center;
   align-content: center;
 
-  height: 242px;
   padding: 20px;
 
   text-align: center;
@@ -762,7 +761,7 @@ img {
   font-size: 18px;
 }
 .posts-item__text {
-  margin: 18px 0;
+  margin: 16px 0;
 
   color: #637588;
 }
