--- a/assets/scss/components/sections/_section-form.scss
+++ b/assets/scss/components/sections/_section-form.scss
@@ -29,21 +29,26 @@
       display: block;
       width: 100%;
       height: 60px;
-      padding: 1px 30px;
+      padding: 0 30px;
       color: $color-light;
       border: 2px solid rgba($color-light, 0);
-      background-color: rgba($color-light, 0.1);
-      border-bottom-color: rgba($color-light, 0.2);
+      background-color: rgba($color-light, 0.05);
+      border-bottom-color: rgba($color-light, 0.25);
       letter-spacing: 2.4px;
       font-size: 18px;
+
+      &::placeholder {
+        color: $color-gray;
+      }
 
       &:hover,
       &:focus {
         color: $color-light;
-        border: 2px solid rgba($color-light, 0.2);
-        background-color: rgba($color-light, 0.2);
-        border-bottom-color: rgba($color-light, 0.7);
+        border: 2px solid $color-light;
+        background-color: rgba($color-light, 0.15);
+        border-bottom-color: $color-light;
         transition: background-color 0.5s, border-color 0.5s;
+        outline: none;
       }
     }
 
