--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -668,8 +668,8 @@ img {
           transition: background-color 0.5s, border-color 0.5s;
 
   color: #ffffff;
-  border: 2px solid #ffffff;
-  border-bottom-color: #ffffff;
+  border: 2px solid rgba(255, 255, 255, 0.2);
+  border-bottom-color: rgba(255, 255, 255, 0.7);
   outline: none;
   background-color: rgba(255, 255, 255, 0.15);
 }
